<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="modelo"
            type="com.example.crudxeovani.viewmodel.FormularioViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FormularioActivity"
    android:padding="4dp">
    <EditText
        android:id="@+id/etNombre"
        android:hint="@string/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@={modelo.nombre}"/>
    <EditText
        android:id="@+id/etEdad"
        android:hint="@string/edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        android:layout_marginTop="4dp"
        android:text="@={modelo.edad}"/>
    <EditText
        android:id="@+id/etCalle"
        android:hint="@string/calle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEdad"
        android:layout_marginTop="4dp"
        android:text="@={modelo.calle}"/>
    <EditText
        android:id="@+id/etNoExterior"
        android:hint="@string/no_exterior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCalle"
        android:layout_marginTop="4dp"
        android:text="@={modelo.noExterior}"/>
    <EditText
        android:id="@+id/etNoInterior"
        android:hint="@string/no_Interior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNoExterior"
        android:layout_marginTop="4dp"
        android:text="@={modelo.noInterior}"/>
    <EditText
        android:id="@+id/etColonia"
        android:hint="@string/Colonia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNoInterior"
        android:layout_marginTop="4dp"
        android:text="@={modelo.colonia}"/>
    <EditText
        android:id="@+id/etEntidad"
        android:hint="@string/entidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etColonia"
        android:layout_marginTop="4dp"
        android:text="@={modelo.entidad}"/>
    <EditText
        android:id="@+id/etAlcaldiaMpio"
        android:hint="@string/alcaldia_mpio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEntidad"
        android:layout_marginTop="4dp"
        android:text="@={modelo.alcaldiaMpio}"/>
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAlcaldiaMpio"
        android:layout_marginTop="4dp"
        android:onClick="@{()->modelo.guardarUsuario()}"/>
    <LinearLayout
        android:id="@+id/linearEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAlcaldiaMpio"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:visibility="gone">
        <Button
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:onClick="@{()->modelo.guardarUsuario()}"
            android:layout_marginRight="4dp"/>
        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrar" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>